--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>eQuiz</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
 </head>
 <body>
-<h1>eQuiz - Online Quiz Plateform</h1>
-<h3>Welcome to eQuiz</h3>
-
+<!-- Importing Header -->
+<div th:insert="header.html :: header"></div>
+<!-- Start Main Container -->
+<div class="main-container container py-5 px-4">
+    <div class="image-box">
+        <img th:src="@{/images/homepage.png}" alt="">
+    </div>
+    <div class="text-box">
+        <h1 class="mb-5 text-center">eQuiz - Online Quiz Platform</h1>
+        <form class="card bg-success py-5 px-4">
+            <p>Enter your name</p>
+            <input type="text" name="username">
+            <button type="submit" class="btn btn-warning"> Start Quiz</button>
+        </form>
+    </div>
+</div>
+<!-- End Main Container -->
+<!-- Importing Footer -->
+<div th:insert="footer.html :: footer"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
