--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    <!-- Import Bootstrap CSS File -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/index.css}">
+    <title>eQuiz</title>
 </head>
 <body>
 <!-- Importing Header -->
@@ -18,9 +20,10 @@
     </div>
     <div class="text-box">
         <h1 class="mb-5 text-center">eQuiz - Online Quiz Platform</h1>
-        <form class="card bg-success py-5 px-4">
+        <form class="card bg-success py-5 px-4" action="/quiz" method="post">
             <p>Enter your name</p>
             <input type="text" name="username">
+            <p class="text-danger warning" th:if="${warning}" th:text="${warning}"></p>
             <button type="submit" class="btn btn-warning"> Start Quiz</button>
         </form>
     </div>
