model, repo create and init db

--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -14,8 +14,12 @@
 
 <!-- Start Main Container -->
 <div class="container py-5 px-4">
-    <h1 class="bg-danger text-light"> Only Select The Currect Answer</h1>
+    <h1 class="bg-danger text-light text-center"> Only Select The Currect Answer</h1>
+    <form action="submit" method="POST">
+        <div class="question-box text-light">
 
+        </div>
+    </form>
 </div>
 <!-- End Main Container -->
 
