--- a/src/main/resources/static/css/quiz.css
+++ b/src/main/resources/static/css/quiz.css
@@ -1,3 +1,14 @@
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
+body{
+    width: 100%;
+    overflow-x: hidden;
+}
+
 footer {
     height: 80px;
     text-align: center;
