--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>eQuiz</title>
     <!-- Import Bootstrap CSS File -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/index.css}">
-    <title>eQuiz</title>
 </head>
 <body>
 <!-- Importing Header -->
@@ -20,7 +19,7 @@
     </div>
     <div class="text-box">
         <h1 class="mb-5 text-center">eQuiz - Online Quiz Platform</h1>
-        <form class="card bg-success py-5 px-4" action="/quiz" method="post">
+        <form class="card bg-success py-5 px-4" action="/quiz" method="POST">
             <p>Enter your name</p>
             <input type="text" name="username">
             <p class="text-danger warning" th:if="${warning}" th:text="${warning}"></p>
