--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,10 +16,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Score Board</a>
+                        <a class="nav-link" aria-current="page" href="/score">Score Board</a>
                     </li>
 
                 </ul>
