--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -15,10 +15,29 @@
 <!-- Start Main Container -->
 <div class="container py-5 px-4">
     <h1 class="bg-danger text-light text-center"> Only Select The Currect Answer</h1>
-    <form action="submit" method="POST">
-        <div class="question-box text-light">
+    <form action="submit" method="POST" th:object="${qFrom}">
+        <div class="ques-box bg-dark text-light" th:each="ques, i: ${qForm.questions}">
+            <p class="title" th:text="${ques.title}"></p>
+            <div class="option">
+                <input type="radio" th:name="|questions[${i.index}].chose|" th:value="1" />
+                <p th:text="${ques.optionA}"></p>
+            </div>
 
+            <div class="option">
+                <input type="radio" th:name="|questions[${i.index}].chose|" th:value="2" />
+                <p th:text="${ques.optionB}"></p>
+            </div>
+
+            <div class="option">
+                <input type="radio" th:name="|questions[${i.index}].chose|" th:value="3" />
+                <p th:text="${ques.optionC}"></p>
+            </div>
+
+            <input type="hidden" th:name="|questions[${i.index}].quesId|" th:value="${ques.quesId}" />
+            <input type="hidden" th:name="|questions[${i.index}].title|" th:value="${ques.title}" />
+            <input type="hidden" th:name="|questions[${i.index}].ans|" th:value="${ques.ans}" />
         </div>
+        <button type="submit" class="btn btn-warning d-block mx-auto mt-4">Submit Answer</button>
     </form>
 </div>
 <!-- End Main Container -->
